# desafio-amopromo

./: .gitignore  README.md  docker-compose.yml  flights.json  travel.json
backend/: manage.py  pyproject.toml
backend/core/: services.py  tests.py
backend/core/management/commands/: import_airports.py
backend/core/migrations/: 0001_initial.py
backend/core/models/: __init__.py  airport_model.py  import_log_model.py  log_model.py
backend/core/routes/: airport_routes.py  flight_search_routes.py  import_log_routes.py  log_routes.py
backend/core/utils/: __init__.py  logging_utils.py
backend/core/views/: airport_views.py  flights_search_views.py  import_log_views.py  log_views.py
backend/import_airports/: asgi.py  settings.py  urls.py  wsgi.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
frontend/airport-frontend/: package.json
frontend/airport-frontend/public/: index.html
frontend/airport-frontend/src/: App.css  App.js  index.js
frontend/airport-frontend/src/components/: Layout.js  Sidebar.js
frontend/airport-frontend/src/pages/: AirportDetail.js  Dashboard.js  FlightSearch.js  Import.js  LogDetail.js  Logs.js
frontend/airport-frontend/src/services/: api.js
